fixing tabs on mobile

--- a/index.css
+++ b/index.css
@@ -47,6 +47,9 @@ html {
         width: 250px;
     }
 
+    .tab{
+        font-size:10px;
+    }
 }
 
 @media screen and (min-width: 960px) {
